--- a/projectname-project/web/src/main/webapp/_ui/css/main.css
+++ b/projectname-project/web/src/main/webapp/_ui/css/main.css
@@ -537,7 +537,6 @@ html, body {
     font-family: 'Open Sans', sans-serif;
 }
 body {
-    background-color: #f8f8f8;
     font-size: 0.875em;
 }
 .wrapper {
@@ -554,12 +553,11 @@ a:focus {
     color:#993213;
 }
 header, footer {
-    background-color: #292929;
+    /*background-color: #292929;*/
     color:#bbc3c8;
 }
 header {
     display: block;
-    position: fixed;
     top: 0;
     width: 100%;
     z-index: 500;
@@ -571,13 +569,90 @@ footer {
     width: 100%;
 }
 label {
+    display: inline-block;
     font-weight: bold;
     text-align: left;
+}
+
+input[type="text"],
+input[type="password"] {
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    -ms-border-radius: 3px;
+    -o-border-radius: 3px;
+    border-radius: 3px;
+    -webkit-box-shadow: 0 1px 0 #fff, 0 -2px 5px rgba(0,0,0,0.08) inset;
+    -moz-box-shadow: 0 1px 0 #fff, 0 -2px 5px rgba(0,0,0,0.08) inset;
+    -ms-box-shadow: 0 1px 0 #fff, 0 -2px 5px rgba(0,0,0,0.08) inset;
+    -o-box-shadow: 0 1px 0 #fff, 0 -2px 5px rgba(0,0,0,0.08) inset;
+    box-shadow: 0 1px 0 #fff, 0 -2px 5px rgba(0,0,0,0.08) inset;
+    -webkit-transition: all 0.5s ease;
+    -moz-transition: all 0.5s ease;
+    -ms-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
+    transition: all 0.5s ease;
+    background: #f9f9f9;
+    background: -moz-linear-gradient(top,  rgba(248,248,248,1) 0%, rgba(249,249,249,1) 100%);
+    background: -webkit-linear-gradient(top,  rgba(248,248,248,1) 0%,rgba(249,249,249,1) 100%);
+    background: -o-linear-gradient(top,  rgba(248,248,248,1) 0%,rgba(249,249,249,1) 100%);
+    background: -ms-linear-gradient(top,  rgba(248,248,248,1) 0%,rgba(249,249,249,1) 100%);
+    background: linear-gradient(top,  rgba(248,248,248,1) 0%,rgba(249,249,249,1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f8f8f8', endColorstr='#f9f9f9',GradientType=0 );
+    border: 1px solid #bbc3c8;
+    color: #555;
+    font: 13px Helvetica, Arial, sans-serif;
+    margin: 0 0 10px;
+    padding: 15px;
+    width: 70%;
+}
+input[type="submit"] {
+    border-radius: 4px;
+    -moz-border-radius: 4px;
+    -webkit-border-radius: 4px;
+    box-shadow: 0 0 4px rgba(0,0,0,0.2);
+    -moz-box-shadow: 0 0 4px rgba(0,0,0,0.2);
+    -webkit-box-shadow: 0 0 4px rgba(0,0,0,0.2);
+    background-color: #f0f0f0;
+    background-repeat: repeat-x;
+    background-image: linear-gradient(top, #fafafa, #f0f0f0);
+    background-image: -khtml-gradient(linear, left top, left bottom, from(#fafafa), to(#f0f0f0));
+    background-image: -moz-linear-gradient(top, #fafafa, #f0f0f0);
+    background-image: -ms-linear-gradient(top, #fafafa, #f0f0f0);
+    background-image: -o-linear-gradient(top, #fafafa, #f0f0f0);
+    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #fafafa), color-stop(100%, #f0f0f0));
+    background-image: -webkit-linear-gradient(top, #fafafa, #f0f0f0);
+    color: #807b6e;
+    display: block;
+    float: right;
+    font-size: 1.125em;
+    font-family: "Open Sans Condensed",sans-serif;
+    height: 46px;
+    line-height: 46px;
+    padding: 0 25px;
+    text-shadow: 1px 1px 0 #fff;
+    width: auto;
 }
 .container {
     margin-left: auto;
     margin-right: auto;
 }
+/* header*/
+.header-bar .logo {
+    background-color: #d5d5d5;
+    border-radius: 5px 20px;
+    color: #fff;
+    display: block;
+    font-family: "Open Sans Condensed",sans-serif;
+    font-size: 3rem;
+    line-height: 1.5;
+    margin: 0.2em 0;
+    padding-bottom: 0.2em;
+    text-align: center;
+    text-decoration: none;
+    text-shadow: 0 1px 0 #ccc, 0 2px 0 #c9c9c9, 0 3px 0 #bbb, 0 4px 0 #b9b9b9, 0 5px 0 #aaa, 0 6px 1px rgba(0, 0, 0, 0.1), 0 0 5px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.3), 0 3px 5px rgba(0, 0, 0, 0.2), 0 5px 10px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.2), 0 20px 20px rgba(0, 0, 0, 0.15);
+    width: 13rem;
+}
+
 .login-form {
     background: #ffffff;
     -webkit-box-shadow: 0 1px 0 #fff inset;
@@ -586,7 +661,7 @@ label {
     -o-box-shadow: 0 1px 0 #fff inset;
     box-shadow: 0 1px 0 #fff inset;
     border: 1px solid #bbc3c8;
-    margin: 8em auto 3em;
+    margin: 4em auto 3em;
     padding: 2em;
     position: relative;
     text-align: center;
@@ -623,67 +698,9 @@ label {
     z-index: -2;
 }
 .login-form label {
-    display: inline-block;
     width: 28%;
 }
-.login-form input[type="text"],
-.login-form input[type="password"] {
-    -webkit-border-radius: 3px;
-    -moz-border-radius: 3px;
-    -ms-border-radius: 3px;
-    -o-border-radius: 3px;
-    border-radius: 3px;
-    -webkit-box-shadow: 0 1px 0 #fff, 0 -2px 5px rgba(0,0,0,0.08) inset;
-    -moz-box-shadow: 0 1px 0 #fff, 0 -2px 5px rgba(0,0,0,0.08) inset;
-    -ms-box-shadow: 0 1px 0 #fff, 0 -2px 5px rgba(0,0,0,0.08) inset;
-    -o-box-shadow: 0 1px 0 #fff, 0 -2px 5px rgba(0,0,0,0.08) inset;
-    box-shadow: 0 1px 0 #fff, 0 -2px 5px rgba(0,0,0,0.08) inset;
-    -webkit-transition: all 0.5s ease;
-    -moz-transition: all 0.5s ease;
-    -ms-transition: all 0.5s ease;
-    -o-transition: all 0.5s ease;
-    transition: all 0.5s ease;
-    background: #f9f9f9;
-    background: -moz-linear-gradient(top,  rgba(248,248,248,1) 0%, rgba(249,249,249,1) 100%);
-    background: -webkit-linear-gradient(top,  rgba(248,248,248,1) 0%,rgba(249,249,249,1) 100%);
-    background: -o-linear-gradient(top,  rgba(248,248,248,1) 0%,rgba(249,249,249,1) 100%);
-    background: -ms-linear-gradient(top,  rgba(248,248,248,1) 0%,rgba(249,249,249,1) 100%);
-    background: linear-gradient(top,  rgba(248,248,248,1) 0%,rgba(249,249,249,1) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f8f8f8', endColorstr='#f9f9f9',GradientType=0 );
-    border: 1px solid #bbc3c8;
-    color: #555;
-    font: 13px Helvetica, Arial, sans-serif;
-    margin: 0 0 10px;
-    padding: 15px;
-    width: 70%;
-}
-.login-form input[type="submit"] {
-    border-radius: 4px;
-    -moz-border-radius: 4px;
-    -webkit-border-radius: 4px;
-    box-shadow: 0 0 4px rgba(0,0,0,0.2);
-    -moz-box-shadow: 0 0 4px rgba(0,0,0,0.2);
-    -webkit-box-shadow: 0 0 4px rgba(0,0,0,0.2);
-    background-color: #f0f0f0;
-    background-repeat: repeat-x;
-    background-image: linear-gradient(top, #fafafa, #f0f0f0);
-    background-image: -khtml-gradient(linear, left top, left bottom, from(#fafafa), to(#f0f0f0));
-    background-image: -moz-linear-gradient(top, #fafafa, #f0f0f0);
-    background-image: -ms-linear-gradient(top, #fafafa, #f0f0f0);
-    background-image: -o-linear-gradient(top, #fafafa, #f0f0f0);
-    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #fafafa), color-stop(100%, #f0f0f0));
-    background-image: -webkit-linear-gradient(top, #fafafa, #f0f0f0);
-    color: #807b6e;
-    display: block;
-    float: right;
-    font-size: 1.125em;
-    font-family: "Open Sans Condensed",sans-serif;
-    height: 46px;
-    line-height: 46px;
-    padding: 0 25px;
-    text-shadow: 1px 1px 0 #fff;
-    width: auto;
-}
+
 .login-form .register-link {
     float: right;
     line-height: 46px;
@@ -726,110 +743,3 @@ label {
         width: 75.000em;
     }
 }
-
-/*
-.headerBar, .footerBar {
-	width: 100%;
-	display: block;
-	background: #555555;
-	color: #ffd700;
-}
-
-.headerBar {
-	height: 60px;
-}
-
-.footerBar {
-	display: block;
-	bottom: 0;
-	height: 110px;
-}
-
-.footerBar, .contentBar:after {
-	height: 110px;
-}
-
-.footerContent, .headerContent {
-	position: relative;
-	display: block;
-	width: 90%;
-	height: auto;
-	margin: 0 auto;
-	text-shadow: 2px 2px 10px #123456;
-}
-
-.footerLeftCell, .headerLeftCell, .footerMidCell, .headerRightCell, .footerRightCell {
-	display: inline;
-	float: left;
-	margin: 20px;
-}
-
-.footerLeftCell, .footerMidCell, .footerRightCell {
-	height: 70px;
-
-}
-
-.footerLeftCell p{
-	vertical-align: text-bottom;
-	font-size: 9pt;
-	font-weight: bolder;
-}
-
-.contentBar:after {
-	content: "";
-	display: block;
-}
-
-.contentBar {
-	min-height: 100%;
-	margin-bottom: -110px;
-}
-
-.mainContent{
-	padding: 20px;
-}
-
-h1 {
-	display: block;
-	margin: 0 auto;
-}
-
-.inputLable {
-	display: inline;
-	height: 30px;
-	font-size: 14pt;
-	margin-top: 3px;
-	float: right;
-}
-
-.inputField {
-	display: inline;
-	float: left;
-	height: 30px;
-	min-width: 150px;
-	font-size: 14pt;
-	margin: 0;
-	padding: 0;
-	border: dotted 1px #333333;
-	background: none;
-}
-
-.inputFormButton {
-	background: none;
-	font-weight: bolder;
-	width: 100px;
-	height: 40px;
-	text-align: center;
-	font-size: 14pt;
-	border: solid 1px #123456;
-}
-
-.inputFormButton:active {
-	background: #AAAAAA;
-}
-
-.loginError {
-	color: red;
-	font-weight: bolder;
-}
-*/
